fix: refreshing label is hidden by resource tree

--- a/ui/src/app/applications/components/application-details/application-details.scss
+++ b/ui/src/app/applications/components/application-details/application-details.scss
@@ -52,6 +52,7 @@ $header: 120px;
         border-radius: 5px;
         padding: 5px 5px;
         font-size: 0.6em;
+        z-index: 1;
     }
 
     &__tab-content-full-height {
